FIX: Remove ArgoCD Helm Secret incorrect label

--- a/tasks/06_install_argocd.yml
+++ b/tasks/06_install_argocd.yml
@@ -127,7 +127,7 @@
         - delete
         - secret
         - -l
-        - owner=helm,name=argo-cd
+        - owner=helm,name=argocd
         - -n
         - "{{install.argocd.namespace}}"
 
