--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -41,6 +41,7 @@
     - 06_install_argocd.yml
     - 07_deploy_apps.yml
     - 08_update_le_config.yml
+    - 09_install_democratic_csi_iscsi.yml
   loop_control:
     label: "{{task_names}}"
     loop_var: task_names
