DemocraticCSI NFS TrueNAS PV init commit

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -42,6 +42,7 @@
     - 07_deploy_apps.yml
     - 08_update_le_config.yml
     - 09_install_democratic_csi_iscsi.yml
+    - 09_install_democratic_csi_nfs.yml
   loop_control:
     label: "{{task_names}}"
     loop_var: task_names
