--- a/tasks/09_install_democratic_csi_iscsi.yml
+++ b/tasks/09_install_democratic_csi_iscsi.yml
@@ -64,12 +64,19 @@
       group: "{{install.os.non_root_user.name}}"
       mode: '0660'
     loop:
-      - "iscsi-driver-config-secret.yaml"     # Temporary stage will be deleted (below) once processed
+      - "iscsi-driver-config-secret.yaml"       # Temporary stage will be deleted (below) once processed
+
+  - name: Create Namespace to Apply Secret to   # ArgoCD will have a copy namespace file
+    kubernetes.core.k8s:
+      state: present
+      kind: Namespace
+      name: "{{install.democratic_csi.namespace}}"
 
   - name: Apply Democratic CSI Config Secret
     kubernetes.core.k8s:
       state: present
       src: "/home/{{install.os.non_root_user.name}}/democratic-csi/{{item}}"
+      namespace: 
       wait: yes
       wait_timeout: 300
     with_items:
