--- a/tasks/10_install_prometheus-op.yml
+++ b/tasks/10_install_prometheus-op.yml
@@ -27,6 +27,7 @@
       - { file: "prometheus-alertmanger_secret.yaml", enabled: "{{install.prometheus_operator.alertmanager.dashboard.enable_basic_auth|default(false)|bool}}" }
       - { file: "prometheus_secret.yaml", enabled: "{{install.prometheus_operator.prometheus.dashboard.enable_basic_auth|default(false)|bool}}" }
       - { file: "prometheus-grafana_secret.yaml", enabled: "{{install.prometheus_operator.grafana.dashboard.enable_basic_auth|default(false)|bool}}" }
+      - { file: "prometheus-grafana_admin_secret.yaml", enabled: true }
     when:
       item.enabled  == true
 
@@ -46,6 +47,7 @@
       - { file: "prometheus-alertmanger_secret.yaml", enabled: "{{install.prometheus_operator.alertmanager.dashboard.enable_basic_auth|default(false)|bool}}" }
       - { file: "prometheus_secret.yaml", enabled: "{{install.prometheus_operator.prometheus.dashboard.enable_basic_auth|default(false)|bool}}" }
       - { file: "prometheus-grafana_secret.yaml", enabled: "{{install.prometheus_operator.grafana.dashboard.enable_basic_auth|default(false)|bool}}" }
+      - { file: "prometheus-grafana_admin_secret.yaml", enabled: true }
     when: item.enabled == true
 
   - name: Delete Prometheus-op Config Secret File
@@ -56,6 +58,7 @@
       - { file: "prometheus-alertmanger_secret.yaml", enabled: "{{install.prometheus_operator.alertmanager.dashboard.enable_basic_auth|default(false)|bool}}" }
       - { file: "prometheus_secret.yaml", enabled: "{{install.prometheus_operator.prometheus.dashboard.enable_basic_auth|default(false)|bool}}" }
       - { file: "prometheus-grafana_secret.yaml", enabled: "{{install.prometheus_operator.grafana.dashboard.enable_basic_auth|default(false)|bool}}" }
+      - { file: "prometheus-grafana_admin_secret.yaml", enabled: true }
     when: item.enabled == true
 
   # K3s does not have control-plane in a pod, get IPs of nodes in control-plane
