--- a/tasks/10_install_prometheus-op.yml
+++ b/tasks/10_install_prometheus-op.yml
@@ -64,15 +64,8 @@
   # K3s does not have control-plane in a pod, get IPs of nodes in control-plane
   - name: Determine InternalIP's for ControlPlane nodes
     command: >
-      kubectl get nodes --selector=node-role.kubernetes.io/control-plane=true
-      -o jsonpath='{.items[*].status.addresses[?(@.type=="InternalIP")].address}'
+      kubectl get nodes --selector=node-role.kubernetes.io/control-plane=true -o jsonpath='{.items[*].status.addresses[?(@.type=="InternalIP")].address}'
     register: controlPlaneIPs
-
-  - name: Copy K3S config.yaml if not exist
-    copy:
-      src: "files/prometheus-op/k3s_config.yaml"
-      dest: "/etc/rancher/k3s/config.yaml"
-      force: "no"
 
   - name: Clone Remote ArgoCD Repository
     ansible.builtin.git:
@@ -84,8 +77,8 @@
   - name: Process Deployable Enabled Applications
     include_tasks: "process_app_to_deploy.yml"
     loop:
-      - { enabled: true,  name: "prometheus-op" }
-      - { enabled: true,  name: "grafana-dashboards"}
+      - { enabled: true,  name: "prometheus-op", overwrite_files: "no" }
+      - { enabled: true,  name: "grafana-dashboards", overwrite_files: "yes"}
     when:
       - deploy_app.enabled == true
     loop_control:
@@ -127,7 +120,18 @@
     state: absent
   when: 
     - inventory_hostname == groups['k3s_control'][0]
-    - install.democratic_csi.nfs.provisioner is defined
+  tags:
+    - never
+    - install_prometheus_operator
+
+# Copy to Each Control Plane Node
+- name: Copy K3S config.yaml if not exist
+  copy:
+    src: "files/prometheus-op/k3s_config.yaml"
+    dest: "/etc/rancher/k3s/config.yaml"
+    force: "no"
+  when: 
+    - inventory_hostname in groups['k3s_control']
   tags:
     - never
     - install_prometheus_operator
