--- a/tasks/06_install_sealed_secrets.yml
+++ b/tasks/06_install_sealed_secrets.yml
@@ -15,6 +15,13 @@
     loop:
       - "{{install.sealed_secrets.namespace}}"
 
+  - name: Create Secret of Sealed Secret Pregenerated Private Key
+    kubernetes.core.k8s:
+      state: present
+      template: "user-files/sealed-secrets/sealed-secrets-priv-key.yaml.j2"
+    when:
+      - install.sealed_secrets.use_pre_generated_private_key|default(false)|bool == true
+
   - name: Install Sealed Secrets Helm
     kubernetes.core.helm:
       name: sealed-secrets
