--- a/tasks/process_secret.yml
+++ b/tasks/process_secret.yml
@@ -55,7 +55,7 @@
   # If you want to generate a new sealed secret then delete the original first.
   - name: Encrypt Secret with Kubeseal
     ansible.builtin.shell:
-      cmd: kubeseal --controller-name {{sealed_secrets.controller_name}} --scope {{deploy_secret.scope|default(sealed_secrets.default_scope)}} --format=yaml < "{{deploy_secret.source}}" > "{{deploy_secret.source|replace('.yaml','-sealed.yaml')}}"
+      cmd: kubeseal --controller-name {{sealed_secrets.controller_name}} --scope {{deploy_secret.scope|default(sealed_secrets.default_scope)}} --format=yaml --controller-namespace {{sealed_secrets.namespace}} < "{{deploy_secret.source}}" > "{{deploy_secret.source|replace('.yaml','-sealed.yaml')}}"
       creates: "{{deploy_secret.source|replace('.yaml','-sealed.yaml')}}"
 
   # Determine if an existing unsealed version of the secret already exists and needs to be 
@@ -67,7 +67,7 @@
 
       if kubectl get secret $SECRET_NAME -n $NAMESPACE
       then
-        kubectl annotate secret $SECRET_NAME {{sealed_secrets.replace_unsealed_secrets_annotation}} -n $NAMESPACE
+        kubectl annotate --overwrite secret $SECRET_NAME {{sealed_secrets.replace_unsealed_secrets_annotation}} -n $NAMESPACE
       fi
     when:
       - install.sealed_secrets.replace_unsealed_secrets|default(false)|bool == true
