--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -146,7 +146,7 @@ install:
     # Select release to use: https://artifacthub.io/packages/helm/bitnami-labs/sealed-secrets
     install_version: "{{sealed_secret_install_version|default('v2.3.0')}}"
 
-    namespace: "kube-system"                       # Add resources to this namespace
+    namespace: "sealed-secrets"                       # Add resources to this namespace
 
     # If a non-Sealed Secret (unsealed secret) already exists, by default it can NOT be replaced
     # by Sealed Secret version as it will fail with "Resource already exists and is not managed
@@ -154,6 +154,15 @@ install:
     # will be annotated as managed by Sealed Secrets which will allow the non-Seale dSecret to be
     # replaced.
     replace_unsealed_secrets: true
+
+    # By default Sealed Secrets will create a new private key with each installation and secrets
+    # can only be decrypted in that cluster unless you manually manipulate the private key.  The
+    # settings below when enabled will instead install your standard private key for Sealed 
+    # Secrets which allows secrets to work across clusters and allows cluster to be restored from
+    # git repository and re-use secrets encrypted with your standard private key.
+    # if not enabled, then a new private key will be used each time Sealed Secrets is installed,
+    # this is the default behavior.
+    use_pre_generated_private_key: true
 
   ###[ Kube-VIP Configuration Settings ]###########################################################
   # Kube-VIP provides HA Load Balancer for the API service and optionally LoadBalancer services
