Kubeseal installed on all control nodes

--- a/tasks/06_install_sealed_secrets.yml
+++ b/tasks/06_install_sealed_secrets.yml
@@ -58,21 +58,25 @@
         - owner=helm,name=sealed-secret
         - -n
         - "{{install.sealed_secrets.namespace}}"
-
-  # Install KubeSeal Executable
-  - name: Install KubeSeal Executable
-    ansible.builtin.shell: |
-      VERSION=$(kubectl get pods -n {{install.sealed_secrets.namespace}} -o jsonpath="{.items[*].spec.containers[*].image}" | tr -s '[[:space:]]' '\n' | uniq | grep sealed-secrets | cut -d ":" -f 2)
-      echo "Fetch Kubeseal ${VERSION}"
-      
-      wget https://github.com/bitnami-labs/sealed-secrets/releases/download/${VERSION}/kubeseal-$(echo ${VERSION}|cut -c2-)-linux-amd64.tar.gz -O kubeseal.tar.gz
-      
-      tar -xvzf kubeseal.tar.gz 
-
-      install -m 755 kubeseal /usr/local/bin/kubeseal
-
   when: 
     - inventory_hostname == groups['k3s_control'][0]
+    - install.sealed_secrets.enabled|default(false)|bool == true
+  tags:
+    - install_sealed_secrets
+
+# Install KubeSeal Executable to all Control Nodes
+- name: Install KubeSeal Executable
+  ansible.builtin.shell: |
+    VERSION=$(kubectl get pods -n {{install.sealed_secrets.namespace}} -o jsonpath="{.items[*].spec.containers[*].image}" | tr -s '[[:space:]]' '\n' | uniq | grep sealed-secrets | cut -d ":" -f 2)
+    echo "Fetch Kubeseal ${VERSION}"
+    
+    wget https://github.com/bitnami-labs/sealed-secrets/releases/download/${VERSION}/kubeseal-$(echo ${VERSION}|cut -c2-)-linux-amd64.tar.gz -O kubeseal.tar.gz
+    
+    tar -xvzf kubeseal.tar.gz 
+
+    install -m 755 kubeseal /usr/local/bin/kubeseal
+  when: 
+    - inventory_hostname in groups['k3s_control']
     - install.sealed_secrets.enabled|default(false)|bool == true
   tags:
     - install_sealed_secrets
