--- a/tasks/07_deploy_apps.yml
+++ b/tasks/07_deploy_apps.yml
@@ -19,10 +19,11 @@
     loop:
       - { enabled: true,  name: "cert-manager"}
       - { enabled: true,  name: "lets-encrypt"}
-      - { enabled: "{{install.kube_vip.enabled|default(false)|bool}}",    name: "kube-vip"}
-      - { enabled: "{{install.kube_vip.lb.enabled|default(false)|bool}}", name: "kube-vip-cloud-provider"}
-      - { enabled: "{{install.traefik.enabled|default(false)|bool}}",     name: "traefik"}
-      - { enabled: "{{install.longhorn.enabled|default(false)|bool}}",    name: "longhorn"}
+      - { enabled: "{{install.kube_vip.enabled|default(false)|bool}}",        name: "kube-vip"}
+      - { enabled: "{{install.kube_vip.lb.enabled|default(false)|bool}}",     name: "kube-vip-cloud-provider"}
+      - { enabled: "{{install.traefik.enabled|default(false)|bool}}",         name: "traefik"}
+      - { enabled: "{{install.longhorn.enabled|default(false)|bool}}",        name: "longhorn"}
+      - { enabled: "{{install.sealed_secrets.enabled|default(false)|bool}}",  name: "sealed-secrets" }
     when:
       - deploy_app.enabled == true
     loop_control:
