Updated commit commet message

--- a/tasks/10_install_prometheus-op.yml
+++ b/tasks/10_install_prometheus-op.yml
@@ -73,6 +73,8 @@
   # Commit Changed to Repository
   - name: Check-in Any New or Modified Files
     include_tasks: "checkin_argocd_repo_files.yml"
+    vars:
+      commit_message: "- Prometheus Operator"  # Keep under 30 chars
 
   when:
     - inventory_hostname == groups['k3s_control'][0]
